rtest/tests/jsr335/Semantics/InterfaceMethods/InheritanceOverriding/ShouldCompile/syntax14/Test.java
// .result=COMPILE_PASS
public class Test {
	public interface A {
		void m();
	}
	public interface B {
		static void m() { }
	}
	public interface C extends A, B {
		
	}
}